[package]
name = "turserver"
version = "0.1.0"
edition = "2024"
description = "A webserver that serves files from Turso embedded database replicas"

[dependencies]
# Make sure we use consistent axum version
axum = "0.8.3"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.114"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.80"
thiserror = "2.0.12"
libsql = { version = "0.9.1", features = ["replication"] }
dotenv = "0.15.0"

# Force resolution of dependencies to avoid conflicts
[package.metadata.resolutions]
"axum" = "0.8.3"